--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
             "Hexlet\\Code\\": "src/"
         },
         "files": [
-            "vendor/docopt/docopt/src/docopt.php"
+            "vendor/docopt/docopt/src/docopt.php",
+            "src/FindDiffFunction.php",
+            "src/JsonFunctions.php"
         ]
     },
     "bin": [
@@ -20,6 +22,11 @@
     ],
     "minimum-stability": "alpha",
     "require": {
-        "docopt/docopt": "^1.0"
+        "docopt/docopt": "^1.0",
+        "lstrojny/functional-php": "^1.17"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "*",
+        "phpstan/phpstan": "^1.10"
     }
 }
