--- a/.github/workflows/php-project-48.yml
+++ b/.github/workflows/php-project-48.yml
@@ -11,11 +11,5 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Hexlet project check
-        uses: hexlet/project-action@release
-        with:
-          hexlet-id: ${{ secrets.HEXLET_ID }}
-      
+      - run: make install
       - run: make test
