--- a/.github/workflows/php-project-48.yml
+++ b/.github/workflows/php-project-48.yml
@@ -11,5 +11,5 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - run: make install
+      - run: composer install
       - run: make test
