--- a/.github/workflows/php-project-48.yml
+++ b/.github/workflows/php-project-48.yml
@@ -11,5 +11,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.1'
+
       - run: composer install
       - run: make test
