--- a/.github/workflows/php-project-48.yml
+++ b/.github/workflows/php-project-48.yml
@@ -16,6 +16,23 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
+      - name: Publish code coverage
+        uses: paambaati/codeclimate-action@v3.0.o
+        env:
+          CC_TEST_REPORTER_ID: ${{secrets. CC_TEST_REPORTER_ID}}
+          JACOCO_SOURCE_PATH: app/src/main/java
+        with:
+        coverageCommand: make test-coverage-text
+        coverageLocations:${{github.workspace}}/app/build/reports/jacoco/test/jacocoTestReport.xm1:jacoco
 
       - run: composer install
       - run: make test
+      - run: make lint
+      - name: Run test & publish code coverage
+        uses: paambaati/codeclimate-action@v5
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: make test-coverage
+          coverageLocations: build/logs/clover.xml:clover
+          debug: true
