--- a/.github/workflows/php-project-48.yml
+++ b/.github/workflows/php-project-48.yml
@@ -18,7 +18,7 @@ jobs:
           php-version: '8.2'
       - run: composer install
       - run: make test
-      - run: make lint
+      # - run: make lint
       - name: Run test & publish code coverage
         uses: paambaati/codeclimate-action@v5
         env:
