--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,10 @@
         "files": [
             "vendor/docopt/docopt/src/docopt.php",
             "src/FindDiffFunction.php",
-            "src/JsonFunctions.php",
-            "vendor/phpunit/phpunit/src/Framework/TestCase.php"
+            "src/DataProcessing.php",
+            "vendor/phpunit/phpunit/src/Framework/TestCase.php",
+            "parsers/JsonParser.php",
+            "parsers/YamlParser.php"
         ]
     },
     "bin": [
@@ -24,7 +26,8 @@
     "minimum-stability": "alpha",
     "require": {
         "docopt/docopt": "^1.0",
-        "lstrojny/functional-php": "^1.17"
+        "lstrojny/functional-php": "^1.17",
+        "symfony/yaml": "^3.4"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "*",
