--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,11 @@
             "src/FindDiffFunction.php",
             "src/DataProcessing.php",
             "vendor/phpunit/phpunit/src/Framework/TestCase.php",
-            "src/JsonParser.php",
-            "src/YamlParser.php",
+            "parsers/JsonParser.php",
+            "parsers/YamlParser.php",
+            "parsers/parseFile.php",
+            "src/Formaters/stylishFormat.php",
+            "src/Formaters/plainFormat.php",
             "src/Formaters.php"
         ]
     },
